ngif is checked

--- a/src/app/modules/components/form-register/form-register.component.html
+++ b/src/app/modules/components/form-register/form-register.component.html
@@ -170,7 +170,7 @@
                 <input class="form-check-input" formControlName="isCheked" type="checkbox" value="" id="flexCheckChecked" >
                 <span class="text-danger"
                     *ngIf="(registerForm.controls['isCheked'].invalid && registerForm.controls['isCheked'].touched)">
-                        Fecha de nacimiento is required
+                        debe de aceptar el acuerdo.
                 </span>
             </div>
             
