--- a/src/app/modules/components/form-register/form-register.component.html
+++ b/src/app/modules/components/form-register/form-register.component.html
@@ -123,8 +123,8 @@
    <div class="row g-3">
         <div class="col-3">
             <label for="city" class="form-label">Region</label>
-                <select name="region" formControlName="region" id="region" class="form-select" >
-                    <option value=" a" *ngFor=" let value of regionalizacion.regiones" >{{value.region}}</option>
+                <select name="region" formControlName="region" id="region" class="form-select" (change)="changed($event)" >
+                    <option *ngFor=" let value of regionalizacion.regiones" [value]="value.region">{{value.region}}</option>
                 </select>
                 <!-- <span class="text-danger"
                 *ngIf="(registerForm.controls['city'].invalid && registerForm.controls['city'].touched)">
@@ -135,8 +135,8 @@
         <div class="col-3">
             <div>
                 <label for="commune" class="form-label">Comuna</label>
-                    <select name="commune" formControlName="commune" id="commune" class="form-select">
-                        <option value="Pudahuel"></option>
+                    <select name="commune" formControlName="commune" id="commune" class="form-select" >
+                        <option ></option>
                     </select>
                     <span class="text-danger"
                     *ngIf="(registerForm.controls['commune'].invalid && registerForm.controls['commune'].touched)">
